# thesis-paper-kb

./: .cursorrules  .dockerignore  .gitignore  .windsurfrules  README.md  command.md  pyproject.toml  sample_env
charts/: eval_results.csv  eval_results_mean.csv
charts/naive_vs_proposed/: eval_results.csv
docker/database/: db-connection-info.md  docker-compose.yml
docker/mcp/: Dockerfile  README-Docker.md  README.md  docker-build.sh  docker-compose.yml  test-networking.md
docs/: architecture.md  docker-optimization.md  usage.md
docs/agent-adk-docs/: adk-knowledge.md  eval-agent.md  llm_agent.md  mcp-tool-adk.md  multi-agent-adk.md
docs/external-package/: fast-mcp.md  graphity.md  light-rag-server-api.json  light-rag-server.md
eval/: eval.json  questions.json  results.json
eval/eval_naive_vs_proposed/: eval.json  results.json
scripts/: analysis_eval.py  clean_broken_pdfs.py  custom_lightrag_entities.py  eval_system.py  mapping_synonyms.txt  parse_eval_json.py  plot_demography.py  prepare_data_for_eval.py  test_db_connection.py  test_kb_service.py
src/agents/: common_tools.py  cypher_graph_query_tools.py
src/agents/context_analyzer_agent/: __init__.py  agent.py
src/agents/knowledge_base_agent/: __init__.py  agent.py  tools.py
src/agents/llm_guard_defender_agent/: __init__.py  agent.py
src/core/: __init__.py  config.py  logger.py  models.py
src/kb_service/: __init__.py  api.py  base_knowledge_graph.py  entities.py  graph_module.py  graphiti_backend.py  lightrag_backend.py  markdown_module.py
src/mcp/: greetings.py
(+6 files in other folders)
